--- a/sparkflowserver/templates/clusters.html
+++ b/sparkflowserver/templates/clusters.html
@@ -1,7 +1,13 @@
 {% extends "layout.html" %}
 {% block body %}
-<h3>Cluster Pools</h3>
-<a class="btn btn-primary" href="{{ url_for('cluster_creation') }}" role="button">Create New</a>
+<div class="row">
+    <div class="col-10">
+        <h3>Cluster Pools</h3>
+    </div>
+    <div class="col-2">
+        <a class="btn btn-primary" href="{{ url_for('cluster_creation') }}" role="button">Create New</a>
+    </div>
+</div>
 <br><br>
 <div class="table-responsive">
     <table class="table table-striped table-sm">
