--- a/sparkflowserver/templates/layout.html
+++ b/sparkflowserver/templates/layout.html
@@ -46,13 +46,13 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="{{ url_for('transforms') }}">
                   <span data-feather="code"></span>
                   Transforms
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="{{ url_for('job_runs') }}">
                   <span data-feather="clock"></span>
                   Job Runs
                 </a>
