--- a/sparkflowserver/templates/clusters.html
+++ b/sparkflowserver/templates/clusters.html
@@ -14,6 +14,7 @@
       <thead>
         <tr>
             <th>ID</th>
+            <th>Fleet Type</th>
             <th>Updated On</th>
             <th>Clusters</th>
             <th>Actions</th>
@@ -23,6 +24,7 @@
         {% for row in data %}
             <tr>
                 <td>{{row["cluster_pool_id"]}}</td>
+                <td>{{row["fleet_type"]}}</td>
                 <td>{{row["update_date"]}}</td>
                 <td>{{row["number_of_clusters"]}}</td>
                 <td><a href="#">Clone</a> | <a class="delete" href="{{ url_for('cluster_pools') }}" id={{row["cluster_pool_id"]}}>Delete</a></td>
