--- a/sparkflowserver/templates/job_runs.html
+++ b/sparkflowserver/templates/job_runs.html
@@ -7,11 +7,14 @@
 </div>
 <br><br>
 <div class="table-responsive">
-    <table class="table table-striped table-sm">
+    <table id="jobsTable" class="table table-striped table-sm table-bordered">
       <thead>
         <tr>
             <th>ID</th>
             <th>Name</th>
+            <th>Created On</th>
+            <th>Start</th>
+            <th>End</th>
             <th>Status</th>
         </tr>
       </thead>
@@ -20,10 +23,18 @@
             <tr>
                 <td>{{row["job_id"]}}</td>
                 <td>{{row["step_name"]}}</td>
+                <td>{{row["creation_datetime"]}}</td>
+                <td>{{row["start_datetime"]}}</td>
+                <td>{{row["end_datetime"]}}</td>
                 <td>{{row["status"]}}</td>
             </tr>
         {% endfor %}
       </tbody>
     </table>
 </div>
+<script type=text/javascript>
+  $(document).ready(function () {
+    $('#jobsTable').DataTable();
+  });
+</script>
 {% endblock %}
